# serializer version: 1
# name: test_run_formats_plan_summary
  '''
  Publish plan for <workspace-root>
  Strip patch strategy: all
  Crates to publish (1):
  - alpha @ 0.1.0
  Skipped (publish = false):
  - beta
  Skipped via publish.exclude:
  - gamma
  Configured exclusions not found in workspace:
  - missing
  
  Staged workspace at: <staging-root>
  Workspace READMEs are handled by lading bump.
  '''
# ---
# name: test_run_reports_no_publishable_crates
  '''
  Publish plan for <workspace-root>
  Strip patch strategy: all
  Crates to publish: none
  Skipped (publish = false):
  - alpha
  Skipped via publish.exclude:
  - beta
  - gamma
  
  Staged workspace at: <staging-root>
  Workspace READMEs are handled by lading bump.
  '''
# ---
